--- a/samples/hello_ar_java/app/src/main/res/layout-land/activity_owned_menu.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout-land/activity_owned_menu.xml
@@ -10,12 +10,11 @@
 
     <Button
         android:id="@+id/buttonMenu"
-        android:layout_width="160dp"
-        android:layout_height="48dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="@dimen/menu_button_width"
+        android:layout_height="@dimen/menu_button_height"
+        android:layout_marginTop="@dimen/cust_margin_top"
         android:text="@string/o_menu_button"
-        android:textSize="20dp"
+        android:textSize="@dimen/text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,11 +24,11 @@
         android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/cust_margin_top"
         android:textColor="@android:color/white"
         android:text="@string/owned_label"
         android:textAlignment="center"
-        android:textSize="35dp"
+        android:textSize="@dimen/cust_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +36,9 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="636dp"
-        android:layout_height="211dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="@dimen/land_list_width"
+        android:layout_height="@dimen/land_list_height"
+        android:layout_marginTop="@dimen/cust_margin_top"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
