--- a/samples/hello_ar_java/app/src/main/res/layout-land/activity_scoreboard.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout-land/activity_scoreboard.xml
@@ -9,13 +9,13 @@
 
     <TextView
         android:id="@+id/scoreTitle"
-        android:layout_width="260dp"
-        android:layout_height="45dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/space_font_ttf"
         android:text="HIGH SCORES"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
-        android:textSize="36sp"
+        android:textSize="@dimen/high_score_size"
         app:layout_constraintBottom_toTopOf="@+id/clear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
@@ -25,8 +25,8 @@
 
     <ListView
         android:id="@+id/list"
-        android:layout_width="296dp"
-        android:layout_height="181dp"
+        android:layout_width="@dimen/score_list_width"
+        android:layout_height="@dimen/score_list_height"
         app:layout_constraintBottom_toTopOf="@+id/clear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.085"
@@ -38,7 +38,7 @@
         android:id="@android:id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NO DATA"
+        android:text=""
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/space_font_ttf"
-        android:hint="Enter initials"
+        android:hint="@string/initial_label"
         android:inputType="text"
         android:maxLength="3"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -67,8 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/space_font_ttf"
-        android:padding="5dp"
-        android:text="Clear Scoreboard"
+        android:text="@string/clear_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/mainMenuButton"
         app:layout_constraintHorizontal_bias="0.51"
@@ -81,8 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/space_font_ttf"
-        android:padding="5dp"
-        android:text="Save Score"
+        android:text="@string/save_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.777"
@@ -92,8 +90,8 @@
 
     <TextView
         android:id="@+id/score"
-        android:layout_width="85dp"
-        android:layout_height="27dp"
+        android:layout_width="@dimen/score_text_width"
+        android:layout_height="@dimen/score_text_height"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -106,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Main Menu"
+        android:text="@string/return_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
@@ -119,7 +117,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/space_font_ttf"
-        android:text="YOUR TIME"
+        android:text="@string/f_time_label"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/targetsText"
         app:layout_constraintEnd_toStartOf="@+id/time"
@@ -132,7 +130,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Num targets"
+        android:text="@string/targets"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/mainMenuButton"
         app:layout_constraintEnd_toStartOf="@+id/targets"
@@ -142,8 +140,8 @@
 
     <TextView
         android:id="@+id/time"
-        android:layout_width="83dp"
-        android:layout_height="28dp"
+        android:layout_width="@dimen/score_text_width"
+        android:layout_height="@dimen/score_text_height"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.766"
@@ -152,8 +150,8 @@
 
     <TextView
         android:id="@+id/targets"
-        android:layout_width="83dp"
-        android:layout_height="28dp"
+        android:layout_width="@dimen/score_text_width"
+        android:layout_height="@dimen/score_text_height"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.77"
@@ -165,7 +163,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/space_font_ttf"
-        android:text="YOUR SCORE"
+        android:text="@string/f_score_label"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/mainMenuButton"
         app:layout_constraintEnd_toStartOf="@+id/score"
@@ -175,52 +173,52 @@
         app:layout_constraintVertical_bias="0.214" />
 
     <TextView
-        android:id="@+id/scoreText2"
+        android:id="@+id/landInitialsLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/land_score_label_margin_top"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Initials"
+        android:text="@string/initials"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toStartOf="@+id/scoreText3"
+        app:layout_constraintEnd_toStartOf="@+id/landScoreLabel"
         app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scoreTitle" />
 
     <TextView
-        android:id="@+id/scoreText3"
+        android:id="@+id/landScoreLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="@dimen/land_score_label_margin_start"
+        android:layout_marginTop="@dimen/land_score_label_margin_top"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Score"
+        android:text="@string/score"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toStartOf="@+id/scoreText4"
+        app:layout_constraintEnd_toStartOf="@+id/landTimeLabel"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scoreTitle" />
 
     <TextView
-        android:id="@+id/scoreText4"
+        android:id="@+id/landTimeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/land_score_label_margin_top"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Time"
+        android:text="@string/time"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toStartOf="@+id/scoreText5"
+        app:layout_constraintEnd_toStartOf="@+id/landTargetLabel"
         app:layout_constraintHorizontal_bias="0.892"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scoreTitle" />
 
     <TextView
-        android:id="@+id/scoreText5"
+        android:id="@+id/landTargetLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/land_score_label_margin_top"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Targets"
+        android:text="@string/targets"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="@+id/scoreTitle"
         app:layout_constraintHorizontal_bias="1.0"
