--- a/samples/hello_ar_java/app/src/main/res/layout-land/activity_settings_menu.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout-land/activity_settings_menu.xml
@@ -10,12 +10,12 @@
 
     <Button
         android:id="@+id/buttonMenu"
-        android:layout_width="181dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="@dimen/menu_button_width"
+        android:layout_height="@dimen/menu_button_height"
+        android:layout_marginBottom="@dimen/settings_menu_margin_bottom"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Menu"
-        android:textSize="20dp"
+        android:text="@string/menu_button"
+        android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -25,10 +25,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Settings"
+        android:text="@string/settings_label"
         android:textColor="@android:color/white"
-        android:textSize="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        android:textSize="@dimen/settings_text_size"
+        app:layout_constraintBottom_toTopOf="@+id/landSessionText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,36 +37,36 @@
 
     <SeekBar
         android:id="@+id/seekVolume"
-        android:layout_width="252dp"
-        android:layout_height="53dp"
+        android:layout_width="@dimen/seek_width"
+        android:layout_height="@dimen/seek_height"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/landVolumeText" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="114dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="96dp"
+        android:id="@+id/landVolumeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/land_volume_margin_top"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Volume"
+        android:text="@string/volume_label"
         android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:textSize="@dimen/text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="177dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="124dp"
+        android:id="@+id/landSessionText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/land_session_margin_top"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Session time"
+        android:text="@string/session_label"
         android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toTopOf="@+id/buttonMenu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.499"
@@ -76,9 +76,9 @@
 
     <EditText
         android:id="@+id/timerDuration"
-        android:layout_width="275dp"
-        android:layout_height="48dp"
-        android:hint="Enter Session Time"
+        android:layout_width="@dimen/duration_width"
+        android:layout_height="@dimen/duration_height"
+        android:hint="@string/duration_label"
         android:inputType="phone"
         app:layout_constraintBottom_toTopOf="@+id/buttonMenu"
         app:layout_constraintEnd_toEndOf="parent"
