--- a/samples/hello_ar_java/app/src/main/res/layout/activity_main_menu.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_main_menu.xml
@@ -9,13 +9,14 @@
 
     <ImageView
         android:id="@+id/btn_capture_photo"
-        android:layout_width="367dp"
-        android:layout_height="235dp"
-        android:layout_marginTop="84dp"
+        android:layout_width="@dimen/logo_width"
+        android:layout_height="@dimen/logo_height"
+        android:layout_marginTop="@dimen/logo_margin_top"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/logo" />
 
     <Button
         android:fontFamily = "@font/space_font_ttf"
@@ -50,7 +51,7 @@
         android:text="@string/play_button"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="30sp"
+        android:textSize="@dimen/play_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
