--- a/samples/hello_ar_java/app/src/main/res/layout/activity_settings_menu.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_settings_menu.xml
@@ -10,12 +10,12 @@
 
     <Button
         android:id="@+id/buttonMenu"
-        android:layout_width="181dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="52dp"
+        android:layout_width="@dimen/menu_button_width"
+        android:layout_height="@dimen/menu_button_height"
+        android:layout_marginBottom="@dimen/settings_menu_margin_bottom"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Menu"
-        android:textSize="20dp"
+        android:text="@string/menu_button"
+        android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -26,10 +26,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Settings"
+        android:text="@string/settings_label"
         android:textColor="@android:color/white"
-        android:textSize="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        android:textSize="@dimen/settings_text_size"
+        app:layout_constraintBottom_toTopOf="@+id/volumeText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,23 +38,23 @@
 
     <SeekBar
         android:id="@+id/seekVolume"
-        android:layout_width="252dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="@dimen/seek_width"
+        android:layout_height="@dimen/seek_height"
+        android:layout_marginTop="@dimen/seek_margin_top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/volumeText" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="114dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="164dp"
+        android:id="@+id/volumeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/volume_margin_top"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Volume"
+        android:text="@string/volume_label"
         android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toTopOf="@+id/buttonMenu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -63,14 +63,14 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="175dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="164dp"
+        android:id="@+id/sessionTimeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/session_margin_top"
         android:fontFamily="@font/space_font_ttf"
-        android:text="Session time"
+        android:text="@string/session_label"
         android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toTopOf="@+id/buttonMenu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -80,9 +80,9 @@
 
     <EditText
         android:id="@+id/timerDuration"
-        android:layout_width="275dp"
-        android:layout_height="48dp"
-        android:hint="Enter Session Time in seconds"
+        android:layout_width="@dimen/duration_width"
+        android:layout_height="@dimen/duration_height"
+        android:hint="@string/duration_label"
         android:inputType="phone"
         app:layout_constraintBottom_toTopOf="@+id/buttonMenu"
         app:layout_constraintEnd_toEndOf="parent"
