--- a/samples/hello_ar_java/app/src/main/res/layout/customizationitem.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/customizationitem.xml
@@ -28,7 +28,7 @@
             android:layout_height="40dp"
             android:textColor="@android:color/white"
             android:layout_marginStart="16dp"
-            android:text="Customization Name"
+            android:text=""
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
