--- a/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.ar.core.examples.java.StarPower.ShootingGalleryActivity">
+    tools:context="com.google.ar.core.examples.java.helloar.ShootingGalleryActivity">
 
   <android.opengl.GLSurfaceView
       android:id="@+id/surfaceview"
